--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Ice Cream Parlor</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
@@ -37,16 +37,43 @@
 
 <body>
 
-  <header>
-
+  <header class="p-4">
+    <nav class="display-3">
+      <div>Ice Cream Code</div>
+    </nav>
   </header>
 
   <main>
-
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-7 store">
+          <div class="row" id="product-cards">
+            <div class="col-md-6 col-lg-4 my-3">
+              <div class="card product-card">
+                <img src="//via.placeholder.com/150" alt="">
+                <div class="card-body">
+                  <div class="d-flex align-items-center justify-content-between">
+                    <p><b>product name</b></p>
+                    <p>$4.99</p>
+                  </div>
+                  <div class="add-item-btn d-flex justify-content-center align-items-center">
+                    <button class="btn btn-outline-dark mdi mdi-cart d-flex align-items-center" title="Add to cart"
+                      onclick="addItemToCart('sku')"><small>ADD</small></button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-5 cart">
+          cart
+        </div>
+      </div>
+    </div>
   </main>
 
-  <footer>
-
+  <footer class="p-4">
+    <marquee behavior="" direction="" scrollamount="1">Made with ♥️ YGBDigital</marquee>
   </footer>
 
   <script src="app.js"></script>
