--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-7 store">
-          <div class="row" id="product-cards">
-            <!-- TEMPLATE REFERENCE -->
-            <div class="col-md-6 col-lg-4 my-3">
+          <div class="text-dark display-6 d-flex justify-content-center align-items-center py-3">Flavors</div>
+          <div class="row justify-content-center justify-content-evenly" id="flavors-cards">
+            <!-- SECTION FLAVORS TEMPLATE-->
+            <!-- <div class="col-md-6 col-lg-4 my-3">
               <div class="card product-card">
                 <img class="store-card-img rounded-top"
                   src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/ultimate-vanilla-ice-cream-1628511695.jpg"
@@ -65,7 +66,49 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div> -->
+          </div>
+          <div class="text-dark display-6 d-flex justify-content-center align-items-center py-3">Toppings</div>
+          <div class="row justify-content-center justify-content-evenly" id="toppings-cards">
+            <!-- SECTION TOPPINGS TEMPLATE -->
+            <!-- <div class="col-md-6 col-lg-4 my-3">
+              <div class="card product-card">
+                <img class="store-card-img rounded-top"
+                  src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/ultimate-vanilla-ice-cream-1628511695.jpg"
+                  alt="">
+                <div class="card-body">
+                  <div class="d-flex align-items-center justify-content-between">
+                    <p><b>product name</b></p>
+                    <p>$4.99</p>
+                  </div>
+                  <div class="add-item-btn d-flex justify-content-center align-items-center">
+                    <button class="btn btn-outline-dark mdi mdi-cart d-flex align-items-center" title="Add to cart"
+                      onclick="addItemToCart('sku')"><small>ADD</small></button>
+                  </div>
+                </div>
+              </div>
+            </div> -->
+          </div>
+          <div class="text-dark display-6 d-flex justify-content-center align-items-center py-3">Container</div>
+          <div class="row justify-content-center justify-content-evenly" id="containers-cards">
+            <!-- SECTION CONTAINERS TEMPLATE  -->
+            <!-- <div class="col-md-6 col-lg-4 my-3">
+              <div class="card product-card">
+                <img class="store-card-img rounded-top"
+                  src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/ultimate-vanilla-ice-cream-1628511695.jpg"
+                  alt="">
+                <div class="card-body">
+                  <div class="d-flex align-items-center justify-content-between">
+                    <p><b>product name</b></p>
+                    <p>$4.99</p>
+                  </div>
+                  <div class="add-item-btn d-flex justify-content-center align-items-center">
+                    <button class="btn btn-outline-dark mdi mdi-cart d-flex align-items-center" title="Add to cart"
+                      onclick="addItemToCart('sku')"><small>ADD</small></button>
+                  </div>
+                </div>
+              </div>
+            </div> -->
           </div>
         </div>
         <div class="col-md-5 d-flex align-items-center justify-content-center cart">
